add styles in sobre nosotros and modified images

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="assets/LOGOTIPO-MOTOSHOP.png">
     <link rel="stylesheet" href="./style.css">
     <title>Motoshop</title>
 </head>
@@ -13,39 +14,47 @@
         </div>
         <nav class="header-nav">
             <ul class="header-list">
-                <a class="header-a" href="#"><li>Inicio</li></a>
-                <a class="header-a" href="#"><li>Acerca de</li></a>
-                <a class="header-a" href="#"><li>Productos</li></a>
+                <a class="header-a" href="#inicio"><li>Inicio</li></a>
+                <a class="header-a" href="#nosotros"><li>Acerca de</li></a>
+                <a class="header-a" href="#productos"><li>Productos</li></a>
             </ul>
         </nav>
     </header>
     <main class="main">
         <!-- Seccion de inicio -->
-        <section class="main-explora">
-            <h2>EXPLORA EL MUNDO SOBRE DOS RUEDAS</h2>
-            <p>
-                "En Motoshop, entendemos la pasión por la libertad y la emoción que solo las 
-                motocicletas pueden brindar. Ya sea que estés buscando la aventura en carreteras 
-                sinuosas o simplemente desees experimentar la sensación de viento en tu rostro, 
-                estamos aquí para ayudarte a encontrar la moto perfecta para ti. Desde motocicletas 
-                de alta velocidad hasta modelos urbanos elegantes, nuestra amplia selección y nuestro 
-                equipo apasionado están listos para hacer realidad tus sueños de conducción. Únete a 
-                nosotros mientras exploramos el mundo sobre dos ruedas. ¡Bienvenido a Motoshop!"
-            </p>
+        <section class="main-inicio" id="inicio">
+            <div class="main-inicio-container">
+                <h1 class="main-inicio-h1">EXPLORA EL MUNDO SOBRE DOS RUEDAS</h2>
+                <p class="main-inicio-p">
+                    "En Motoshop, entendemos la pasión por la libertad y la emoción que solo las 
+                    motocicletas pueden brindar. Ya sea que estés buscando la aventura en carreteras 
+                    sinuosas o simplemente desees experimentar la sensación de viento en tu rostro, 
+                    estamos aquí para ayudarte a encontrar la moto perfecta para ti. Desde motocicletas 
+                    de alta velocidad hasta modelos urbanos elegantes, nuestra amplia selección y nuestro 
+                    equipo apasionado están listos para hacer realidad tus sueños de conducción. Únete a 
+                    nosotros mientras exploramos el mundo sobre dos ruedas. ¡Bienvenido a Motoshop!"
+                </p>
+            </div>
         </section>
         <!-- Seccion de Acerca de nosotros -->
-        <section class="main-nosotros">
-            <h2>SOBRE NOSOTROS</h2>
-            <p>
-                En Motoshop, nos apasiona mucho más que simplemente vender motocicletas; estamos 
-                comprometidos con la creación de experiencias excepcionales para nuestros clientes en 
-                cada paso del camino. Desde nuestra fundación, hemos sido más que una simple tienda de
-                motocicletas; somos una comunidad de entusiastas que comparten la misma pasión por la 
-                libertad y la emoción que solo las motos pueden ofrecer.
-            </p>
+        <section class="main-nosotros" id="nosotros">
+            <div class="main-nosotros-container main-nosotros-container__video">
+                <video src="./documentos-videos/4587492_Road_Speed_4096x2304.mp4" type="video/mp4" width="640" height="auto" autoplay >
+                </video>
+            </div>
+            <div class="main-nosotros-container main-nosotros-container__texto">
+                <h2 class="main-nosotros-h2">SOBRE NOSOTROS</h2>
+                <p class="main-nosotros-p">
+                    En Motoshop, nos apasiona mucho más que simplemente vender motocicletas; estamos 
+                    comprometidos con la creación de experiencias excepcionales para nuestros clientes en 
+                    cada paso del camino. Desde nuestra fundación, hemos sido más que una simple tienda de
+                    motocicletas; somos una comunidad de entusiastas que comparten la misma pasión por la 
+                    libertad y la emoción que solo las motos pueden ofrecer.
+                </p>
+            </div>
         </section>
         <!-- Seccion de productos -->
-        <section id="Productos">
+        <section id="productos">
             <div class="catalogo">
                 <div class="imagen"><img src="" alt="Imagen 1"></div>
                 <div class="imagen"><img src="" alt="Imagen 2"></div>
