add styles footer

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Seccion de Acerca de nosotros -->
         <section class="main-nosotros" id="nosotros">
             <div class="main-nosotros-container main-nosotros-container__video">
-                <video src="./documentos-videos/4587492_Road_Speed_4096x2304.mp4" type="video/mp4" width="640" height="auto" autoplay >
+                <video src="./documentos-videos/4587492_Road_Speed_4096x2304.mp4" type="video/mp4" width="640" height="auto" autoplay loop>
                 </video>
             </div>
             <div class="main-nosotros-container main-nosotros-container__texto">
@@ -56,23 +56,27 @@
         <!-- Seccion de productos -->
         <section id="productos">
             <div class="catalogo">
-                <div class="imagen"><img src="" alt="Imagen 1"></div>
-                <div class="imagen"><img src="" alt="Imagen 2"></div>
-                <div class="imagen"><img src="" alt="Imagen 3"></div>
-                <div class="imagen"><img src="" alt="Imagen 4"></div>
-                <div class="imagen"><img src="" alt="Imagen 5"></div>
-                <div class="imagen"><img src="" alt="Imagen 6"></div>
+                <div class="imagen"><img src="./assets/1.jpeg" alt="Imagen 1"></div>
+                <div class="imagen"><img src="./assets/2.jpg" alt="Imagen 2"></div>
+                <div class="imagen"><img src="./assets/3.jpg" alt="Imagen 3"></div>
+                <div class="imagen"><img src="./assets/4.jpg" alt="Imagen 4"></div>
+                <div class="imagen"><img src="./assets/5.jpg" alt="Imagen 5"></div>
+                <div class="imagen"><img src="./assets/6.jpg" alt="Imagen 6"></div>
             </div>
         </section>
     </main>
     <footer class="footer">
-        <p>SIGUENOS EN NUESTRA REDES SOCIALES</p>
-        <div>
-            <img src="#" alt="Logotipo">
-            <ul>
-                <a href="https://www.instagram.com/desingner_warning?igsh=YXF5YTNiM2d1bDln&utm_source=qr" target="_blank"><li><i class="fa-brands fa-instagram"></i></li></a>
-                <a href="https://www.facebook.com/ArmandoGonza1620?mibextid=LQQJ4d" target="_blank"><li><i class="fa-brands fa-square-facebook"></i></li></a>
-            </ul>
+        <p class="footer-p">SIGUENOS EN NUESTRA REDES SOCIALES</p>
+        <div class="footer-container">
+            <div class="footer-container-img">
+                <img class="footer-img" src="./assets/LOGOTIPO-MOTOSHOP.png" alt="Logotipo">    
+            </div>
+            <div class="footer-container-ul">
+                <ul class="footer-ul">
+                    <a class="footer-a" href="https://www.instagram.com/desingner_warning?igsh=YXF5YTNiM2d1bDln&utm_source=qr" target="_blank"><li><i class="fa-brands fa-instagram"></i></li></a>
+                    <a class="footer-a" href="https://www.facebook.com/ArmandoGonza1620?mibextid=LQQJ4d" target="_blank"><li><i class="fa-brands fa-square-facebook"></i></li></a>
+                </ul> 
+            </div>
         </div>
     </footer>
     <!-- CDN que permite utilizar iconos como los de redes sociales -->
