--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- Seccion de productos -->
         <section id="productos">
             <div class="catalogo">
-                <div class="imagen"><img src="./assets/1.jpeg" alt="Imagen 1"></div>
+                <div class="imagen"><img src="./assets/1.jpg" alt="Imagen 1"></div>
                 <div class="imagen"><img src="./assets/2.jpg" alt="Imagen 2"></div>
                 <div class="imagen"><img src="./assets/3.jpg" alt="Imagen 3"></div>
                 <div class="imagen"><img src="./assets/4.jpg" alt="Imagen 4"></div>
