--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,12 +56,12 @@
         <!-- Seccion de productos -->
         <section id="productos">
             <div class="catalogo">
-                <div class="imagen"><img src="./assets/1.jpg" alt="Imagen 1"></div>
-                <div class="imagen"><img src="./assets/2.jpg" alt="Imagen 2"></div>
-                <div class="imagen"><img src="./assets/3.jpg" alt="Imagen 3"></div>
-                <div class="imagen"><img src="./assets/4.jpg" alt="Imagen 4"></div>
-                <div class="imagen"><img src="./assets/5.jpg" alt="Imagen 5"></div>
-                <div class="imagen"><img src="./assets/6.jpg" alt="Imagen 6"></div>
+                <a href="./productos.html" target="_blank"><div class="imagen"><img src="./assets/1.jpg" alt="Imagen 1"></div></a>
+                <a href="./productos.html" target="_blank"><div class="imagen"><img src="./assets/2.jpg" alt="Imagen 2"></div></a>
+                <a href="./productos.html" target="_blank"><div class="imagen"><img src="./assets/3.jpg" alt="Imagen 3"></div></a>
+                <a href="./productos.html" target="_blank"><div class="imagen"><img src="./assets/4.jpg" alt="Imagen 4"></div></a>
+                <a href="./productos.html" target="_blank"><div class="imagen"><img src="./assets/5.jpg" alt="Imagen 5"></div></a>
+                <a href="./productos.html" target="_blank"><div class="imagen"><img src="./assets/6.jpg" alt="Imagen 6"></div></a>
             </div>
         </section>
     </main>
