add button in page productos

--- a/productos.html
+++ b/productos.html
@@ -14,9 +14,7 @@
         </div>
         <nav class="header-nav">
             <ul class="header-list">
-                <a class="header-a" href="#inicio"><li>Inicio</li></a>
-                <a class="header-a" href="#nosotros"><li>Acerca de</li></a>
-                <a class="header-a" href="#productos"><li>Productos</li></a>
+                <a class="header-a" href="./index.html"><li>Inicio</li></a>
             </ul>
         </nav>
     </header>
