add products in section of products in html

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <a href="./productos.html" target="_blank"><div class="imagen"><img src="./assets/2.jpg" alt="Imagen 2"></div></a>
                 <a href="./productos.html" target="_blank"><div class="imagen"><img src="./assets/3.jpg" alt="Imagen 3"></div></a>
                 <a href="./productos.html" target="_blank"><div class="imagen"><img src="./assets/4.jpg" alt="Imagen 4"></div></a>
-                <a href="./productos.html" target="_blank"><div class="imagen"><img src="./assets/5.jpg" alt="Imagen 5"></div></a>
-                <a href="./productos.html" target="_blank"><div class="imagen"><img src="./assets/6.jpg" alt="Imagen 6"></div></a>
+                <a href="./productos.html" target="_blank"><div class="imagen"><img src="./assets/5.webp" alt="Imagen 5"></div></a>
+                <a href="./productos.html" target="_blank"><div class="imagen"><img src="./assets/6.webp" alt="Imagen 6"></div></a>
             </div>
         </section>
     </main>
