--- a/productos.html
+++ b/productos.html
@@ -18,5 +18,170 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <article>
+            <img src="./assets/1.jpg" alt="">
+            <div class="container">
+                <div>
+                    <h3>YZF-R7 2023</h3>
+                    <p class="descripcion">El motor CP2 de 689 cc de la R7 ofrece una emocionante aceleración y una respuesta instantánea del acelerador. El cigüeñal de 270 grados genera un intervalo de encendido irregular que garantiza una sensación viva y excitante a medida que aumentan las revoluciones, mientras que el potente par lineal te permite desarrollar la eficiencia de la potencia para tomar las curvas más rápido. </p>
+                    <p class="precio">Precio: <span>$249,999</span></p>
+                </div>
+                <button>
+                    Comprar ahora
+                </button>
+            </div>
+        </article>
+        <article>
+            <div class="container">
+                <div>
+                    <h3>MT-15 2023</h3>
+                    <p class="descripcion">Con un motor de alta tecnología, una carrocería compacta y un diseño propio de la linea MT de próxima generación, esta nueva y emocionante motocicleta no tiene comparación. Prepárate para activar tu lado oscuro. Porque esta ligera Hyper Naked va a transformar tu mundo.</p>
+                    <p class="precio">Precio: <span>$89,999</span></p>
+                </div>
+                <button>
+                    Comprar ahora
+                </button>
+            </div>
+            <img src="./assets/2.jpg" alt="">
+        </article>
+        <article>
+            <img src="./assets/3.jpg" alt="">
+            <div class="container">
+                <div>
+                    <h3>MT-15 2024</h3>
+                    <p class="descripcion">Con un motor de alta tecnología, una carrocería compacta y un diseño propio de la linea MT de próxima generación, esta nueva y emocionante motocicleta no tiene comparación. Prepárate para activar tu lado oscuro. Porque esta ligera Hyper Naked va a transformar tu mundo.</p>
+                    <p class="precio">Precio: <span>$94,999</span></p>
+                </div>
+                <button>
+                    Comprar ahora
+                </button>
+            </div>
+        </article>
+        <article>
+            <div class="container">
+                <div>
+                    <h3>MT-03 2024</h3>
+                    <p class="descripcion"> La nueva MT-03 llega al mercado mexicano con una propuesta agresiva e intimidante.
+                        Con un desempeño excepcional y diseño impactante, la nueva MT-03, ahora con ABS vuelve a elevar el concepto de las motocicletas Naked de mediana cilindrada en México.</p>
+                    <p class="precio">Precio: <span>154,999</span></p>
+                </div>
+                <button>
+                    Comprar ahora
+                </button>
+            </div>
+            <img src="./assets/4.jpg" alt="">
+        </article>
+        <article>
+            <img src="./assets/5.webp" alt="">
+            <div class="container">
+                <div>
+                    <h3>MT-07 2024</h3>
+                    <p class="descripcion">La MT-07 de última generación luce un diseño distintivo con dos tomas de aire de tipo aleta y un nuevo faro LED compacto que proyecta un frontal futurista en forma de Y: el estilo característico de los últimos modelos Hyper Naked. Y el motor refinado te brinda una respuesta aún más lineal con una nota de escape más atrevida.</p>
+                    <p class="precio">Precio: <span>$239,999</span></p>
+                </div>
+                <button>
+                    Comprar ahora
+                </button>
+            </div>
+        </article>
+        <article>
+            <div class="container">
+                <div>
+                    <h3>MT-09 2024</h3>
+                    <p class="descripcion">Su motor CP3 de 890 cc de gran capacidad que genera más potencia con menos revoluciones, brinda una aceleración de mejor respuesta y unas mejores prestaciones en la carretera.
+                        Una IMU de 6 ejes de alta tecnología que regula las mejores prestaciones electrónicas para el conductor y otorgarle el máximo control de manejo.</p>
+                    <p class="precio">Precio: <span>$299,999</span></p>
+                </div>
+                <button>
+                    Comprar ahora
+                </button>
+            </div>
+            <img src="./assets/6.webp" alt="">
+        </article>
+    </main>
+    <footer class="footer">
+        <p class="footer-p">SIGUENOS EN NUESTRA REDES SOCIALES</p>
+        <div class="footer-container">
+            <div class="footer-container-img">
+                <img class="footer-img" src="./assets/LOGOTIPO-MOTOSHOP.png" alt="Logotipo">    
+            </div>
+            <div class="footer-container-ul">
+                <ul class="footer-ul">
+                    <a class="footer-a" href="https://www.instagram.com/desingner_warning?igsh=YXF5YTNiM2d1bDln&utm_source=qr" target="_blank"><li><i class="fa-brands fa-instagram"></i></li></a>
+                    <a class="footer-a" href="https://www.facebook.com/ArmandoGonza1620?mibextid=LQQJ4d" target="_blank"><li><i class="fa-brands fa-square-facebook"></i></li></a>
+                </ul> 
+            </div>
+        </div>
+    </footer>
+    <!-- CDN que permite utilizar iconos como los de redes sociales -->
+    <script src="https://kit.fontawesome.com/c4e819737f.js" crossorigin="anonymous"></script>
+    <style>
+        main {
+            padding-top: 175px;
+        }
+        article {
+            width: 100%;
+            height: 80vh;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 150px;
+        }
+        img {
+            width: auto;
+            height: 280px;
+            object-fit: contain;
+        }
+
+        .container {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: baseline;
+            padding: 100px 0;
+        }
+
+        h3 {
+            font-size: 2rem;
+            text-align: center;
+            margin-bottom: 1rem;
+        }
+
+        p {
+            width: 70%;
+            margin: 0 auto;
+        }
+
+        button {
+            background-color: black;
+            color: #fff;
+            font-size: 1.5rem;
+            font-weight: 500;
+            margin: 0 auto;
+            padding: 1rem 2rem;
+            border-radius: 15px;
+            border: none;
+            transition: transform 0.3s ease;
+            margin-top: 1rem;
+        }
+
+        button:hover {
+            font-weight: 600;
+            cursor: pointer;
+        }
+
+        .precio {
+            margin-top: 1rem;
+            font-weight: 700;
+        }
+
+        span {
+            color: #f00;
+            font-weight: 700;
+        }
+    </style>
 </body>
 </html>
