--- a/productos.html
+++ b/productos.html
@@ -20,7 +20,9 @@
     </header>
     <main>
         <article>
-            <img src="./assets/1.jpg" alt="">
+            <div class="image">
+                <img src="./assets/1.jpg" alt="">
+            </div>
             <div class="container">
                 <div>
                     <h3>YZF-R7 2023</h3>
@@ -43,10 +45,14 @@
                     Comprar ahora
                 </button>
             </div>
-            <img src="./assets/2.jpg" alt="">
+            <div class="image">
+                <img src="./assets/2.jpg" alt="">
+            </div>
         </article>
         <article>
-            <img src="./assets/3.jpg" alt="">
+            <div class="image">
+                <img src="./assets/3.jpg" alt="">
+            </div>
             <div class="container">
                 <div>
                     <h3>MT-15 2024</h3>
@@ -70,10 +76,14 @@
                     Comprar ahora
                 </button>
             </div>
-            <img src="./assets/4.jpg" alt="">
+            <div class="image">
+                <img src="./assets/4.jpg" alt="">s
+            </div>
         </article>
         <article>
-            <img src="./assets/5.webp" alt="">
+            <div class="image">
+                <img src="./assets/5.webp" alt="">
+            </div>
             <div class="container">
                 <div>
                     <h3>MT-07 2024</h3>
@@ -97,7 +107,9 @@
                     Comprar ahora
                 </button>
             </div>
-            <img src="./assets/6.webp" alt="">
+            <div class="image">
+                <img src="./assets/6.webp" alt="">
+            </div>
         </article>
     </main>
     <footer class="footer">
@@ -123,14 +135,22 @@
         article {
             width: 100%;
             height: 80vh;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 150px;
+            display: grid;
+            grid-template-columns: 1fr 1fr; /* Dos columnas de igual tamaño */
+            justify-content: center; /* No necesario con grid pero puedes ajustar si lo necesitas */
+            align-items: center; /* No necesario con grid pero puedes ajustar si lo necesitas */
+            padding: 0 50px;
         }
+
+        .image {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
         img {
-            width: auto;
-            height: 280px;
+            width: 350px;
+            height: auto;
             object-fit: contain;
         }
 
@@ -151,7 +171,8 @@
         }
 
         p {
-            width: 70%;
+            width: 90%;
+            text-align: justify;
             margin: 0 auto;
         }
 
@@ -181,6 +202,58 @@
         span {
             color: #f00;
             font-weight: 700;
+        }
+
+        .footer-p {
+            text-align: center;
+        }
+
+        @media (max-width: 1280px) {
+            .header {
+                position: static;
+            }
+
+            .container {
+                justify-content: center;
+                align-items: center;
+            }
+        }
+
+        @media (max-width: 768px) {
+            article {
+                grid-template-columns: 1fr; /* Una columna para ocupar todo el ancho */
+                grid-template-rows: auto auto; /* Dos filas para los elementos */
+                justify-content: center; /* No necesario con grid pero puedes ajustar si lo necesitas */
+                align-items: center; /* No necesario con grid pero puedes ajustar si lo necesitas */
+                padding: 0 50px;
+            }
+
+            img {
+                width: 200px;
+            }
+
+            .image {
+                order: 1; /* Mueve las imágenes después de los contenedores */
+            }
+
+            .container {
+                height: 70%;
+                order: 2; /* Asegura que los contenedores estén antes de las imágenes */
+            }
+
+            h3 {
+                font-size: 1.4rem;
+            }
+
+            p {
+                font-size: 0.9rem;
+            }
+
+            button {
+                font-size: 1rem;
+                font-weight: 600;
+                padding: 1rem 2rem;
+            }
         }
     </style>
 </body>
